CIRC-2019 Update src/test/java/api/support/fakes/FakeCQLToJSONInterpreter.java
Co-authored-by: Roman Barannyk <53909129+roman-barannyk@users.noreply.github.com>